<resources>
    <string name="app_name">Environment Sensors</string>
    <string name="pressure">Pressure</string>
    <string name="light">Light</string>
    <string name="temperature">Temperature</string>
    <string name="Insert_value">Insert</string>
    <string name="delete_value">Delete</string>
    <string name="retrieve_all">Retrieve All</string>
    <string name="content_provider">Records from DB</string>
    <string name="statistics_data">Statistics</string>
    <string name="light_hint">Ambient light level Value</string>
    <string name="light_value_hint">Get Intensity Value</string>
    <string name="light_value1">Min Value</string>
    <string name="max_value">Max Value</string>
    <string name="get_max_value">Get Max Value</string>
    <string name="average_value">Average Value</string>
    <string name="get_avg_value">Get Avg Value</string>
    <string name="atmospheric_pressure_value">Atmospheric pressure Value</string>
    <string name="pressure_val">hPa (millibar)</string>
    <string name="get_min_value">Get Min Value</string>
    <string name="temperature_val">Ambient Temperature</string>
    <string name="temp_measure">degree Celsius</string>
    <string name="min_value">Min Value</string>
    <string name="quit">Quit</string>
    <string name="statistics_display">Data View</string>
    <string name="graph_view">Graph View</string>
</resources>
