<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Pressure">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#841841"
            android:text="@string/atmospheric_pressure_value"/>
        <EditText
            android:id="@+id/PValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint= "@string/pressure_val"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#841841"
            android:text="@string/min_value"/>
        <EditText
            android:id="@+id/PMinValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d8a96c"
            android:hint= "@string/get_min_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#841841"
            android:text="@string/max_value"/>

        <EditText
            android:id="@+id/PMaxValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d8a96c"
            android:hint= "@string/get_max_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#841841"
            android:text="@string/average_value"/>

        <EditText
            android:id="@+id/PAvgValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d8a96c"
            android:hint= "@string/get_avg_value"/>
    </LinearLayout>


</LinearLayout>