<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Temp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_val"
            android:textColor="#cc5466"/>
        <EditText
            android:id="@+id/TValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bc5011"
            android:inputType="number"
            android:hint= "@string/temp_measure"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#cc5466"
            android:text="@string/min_value"/>
        <EditText
            android:id="@+id/TMinValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bc5011"
            android:hint= "@string/get_min_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#cc5466"
            android:text="@string/max_value"/>

        <EditText
            android:id="@+id/TMaxValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bc5011"
            android:hint= "@string/get_max_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bc5011"
            android:text="@string/average_value"/>

        <EditText
            android:id="@+id/TAvgValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bc5011"
            android:hint= "@string/get_avg_value"/>
    </LinearLayout>
</LinearLayout>