<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:id="@+id/light">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#32a9b0"
            android:text="@string/light_hint"/>
        <EditText
            android:id="@+id/LIntensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint= "@string/light_value_hint"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#32a9b0"
            android:text="@string/light_value1"/>
        <EditText
            android:id="@+id/LMinValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint= "@string/light_value1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#32a9b0"
            android:text="@string/max_value"/>

    <EditText
        android:id="@+id/LMaxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:hint= "@string/get_max_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#32a9b0"
            android:text="@string/average_value"/>

    <EditText
        android:id="@+id/LAvgValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:hint= "@string/get_avg_value"/>
    </LinearLayout>
</LinearLayout>