<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.gudet.sensorsproject.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/button1"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertSensor"
                android:text="@string/Insert_value"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/button2"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickDeleteSensor"
                android:text="@string/delete_value"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/button3"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickRetrieveSensor"
                android:text="@string/retrieve_all"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:layout_marginTop="58dp"
            android:fadeScrollbars="true"
            android:fadingEdge="vertical"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:text="@string/content_provider"
            android:textColor="@color/colorDecorationDark" />

        <Button
            android:id="@+id/statistics_Button"
            android:layout_width="352dp"
            android:layout_height="61dp"
            android:layout_below="@+id/textView"
            android:onClick="onStatisticsActivity"
            android:text="@string/statistics_data"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClickQuit"
            android:text="@string/quit"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</LinearLayout>
